infrastructure/argocd/argocd-repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd

spec:
  template:
    spec:
      volumes:
        - name: cmp-sops
          configMap:
            name: cmp-sops

        - name: sops-age
          secret:
            secretName: sops-age

        - name: cmp-tmp
          emptyDir: {}

        - name: sops-tool
          emptyDir: {}

      containers:
        - name: cmp-sops
          image: alpine:3.18

          command:
            - /var/run/argocd/argocd-cmp-server

          securityContext:
            runAsNonRoot: true
            runAsUser: 999

          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files

            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins

            - mountPath: /tmp
              name: cmp-tmp

            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: plugin.yaml
              name: cmp-sops

            - mountPath: /usr/local/bin/sops
              name: sops-tool
              subPath: sops

            - mountPath: /usr/local/bin/kustomize
              name: sops-tool
              subPath: kustomize

            - mountPath: /sops-age
              name: sops-age
              readOnly: true
