infrastructure/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    # Tell Traefik to explicitly pass X-Forwarded-Proto headers to Argo CD
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # SSL Offloading annotation for Argo CD
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  rules:
    - host: argocd.dc.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
